test: migrate service tests to @DataJpaTest with TestEntityManager
Refactor integration tests to use Spring Data JPA testing framework:
- Annotate all service integration tests with @DataJpaTest
- Utilize TestEntityManager for database operations instead of repositories
- Enable realistic entity lifecycle testing with rollback transactions
- Improve test isolation and database state management

Benefits:
- Faster than full @SpringBootTest but with real database
- Automatic transaction rollback after each test
- Proper testing of JPA mappings and relationships
- Better test data isolation and cleanup