@@ -3,41 +3,30 @@ package ru.practicum.shareit.server.comment.service;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
+import org.springframework.context.annotation.Import;
+import ru.practicum.shareit.server.AllMappersTestConfig;
 import ru.practicum.shareit.server.comment.dto.CommentDto;
 import ru.practicum.shareit.server.comment.model.Comment;
-import ru.practicum.shareit.server.comment.repository.CommentRepository;
 import ru.practicum.shareit.server.item.model.Item;
-import ru.practicum.shareit.server.item.repository.ItemRepository;
 import ru.practicum.shareit.server.user.entity.User;
-import ru.practicum.shareit.server.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.within;
 
-@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.NONE)
-@ActiveProfiles("test")
-@Transactional
+@DataJpaTest
+@Import({CommentServiceImpl.class, AllMappersTestConfig.class})
 class CommentServiceImplIntegrationTest {
 
     @Autowired
+    private TestEntityManager entityManager;
+
+    @Autowired
     private CommentServiceImpl commentService;
-
-    @Autowired
-    private CommentRepository commentRepository;
-
-    @Autowired
-    private ItemRepository itemRepository;
-
-    @Autowired
-    private UserRepository userRepository;
 
     private User owner;
     private User author;
@@ -50,56 +39,54 @@ class CommentServiceImplIntegrationTest {
 
     @BeforeEach
     void setUp() {
-        // Используем усеченное время для согласованности с БД
-        now = LocalDateTime.now().truncatedTo(ChronoUnit.MICROS);
-
-        commentRepository.deleteAll();
-        itemRepository.deleteAll();
-        userRepository.deleteAll();
+        now = LocalDateTime.now();
 
         owner = new User();
         owner.setName("Owner");
         owner.setEmail("owner@example.com");
-        owner = userRepository.save(owner);
+        entityManager.persist(owner);
 
         author = new User();
         author.setName("Author");
         author.setEmail("author@example.com");
-        author = userRepository.save(author);
+        entityManager.persist(author);
 
         item1 = new Item();
         item1.setName("Item 1");
         item1.setDescription("Description 1");
         item1.setAvailable(true);
         item1.setOwner(owner);
-        item1 = itemRepository.save(item1);
+        entityManager.persist(item1);
 
         item2 = new Item();
         item2.setName("Item 2");
         item2.setDescription("Description 2");
         item2.setAvailable(true);
         item2.setOwner(owner);
-        item2 = itemRepository.save(item2);
+        entityManager.persist(item2);
 
         comment1 = new Comment();
         comment1.setText("Great item!");
         comment1.setItem(item1);
         comment1.setAuthor(author);
         comment1.setCreated(now.minusDays(2));
+        entityManager.persist(comment1);
 
         comment2 = new Comment();
         comment2.setText("Very useful, thanks!");
         comment2.setItem(item1);
         comment2.setAuthor(author);
         comment2.setCreated(now.minusDays(1));
+        entityManager.persist(comment2);
 
         comment3 = new Comment();
         comment3.setText("Not bad");
         comment3.setItem(item2);
         comment3.setAuthor(author);
         comment3.setCreated(now);
+        entityManager.persist(comment3);
 
-        commentRepository.saveAll(List.of(comment1, comment2, comment3));
+        entityManager.flush();
     }
 
     @Test
@@ -127,7 +114,8 @@ class CommentServiceImplIntegrationTest {
         item3.setDescription("Description 3");
         item3.setAvailable(true);
         item3.setOwner(owner);
-        item3 = itemRepository.save(item3);
+        entityManager.persist(item3);
+        entityManager.flush();
 
         List<CommentDto> result = commentService.getCommentsForItem(item3.getId());
 
@@ -147,7 +135,7 @@ class CommentServiceImplIntegrationTest {
                 .containsExactly("Very useful, thanks!", "Great item!");
 
         assertThat(result.get(item2.getId())).hasSize(1);
-        assertThat(result.get(item2.getId()).get(0).text()).isEqualTo("Not bad");
+        assertThat(result.get(item2.getId()).getFirst().text()).isEqualTo("Not bad");
     }
 
     @Test
@@ -164,12 +152,13 @@ class CommentServiceImplIntegrationTest {
         item3.setDescription("Description 3");
         item3.setAvailable(true);
         item3.setOwner(owner);
-        item3 = itemRepository.save(item3);
+        entityManager.persist(item3);
+        entityManager.flush();
 
         Map<Long, List<CommentDto>> result = commentService.getCommentsForItems(
                 List.of(item3.getId()));
 
-        assertThat(result).hasSize(0);
+        assertThat(result).isEmpty();
     }
 
     @Test
@@ -188,10 +177,7 @@ class CommentServiceImplIntegrationTest {
 
         assertThat(result).hasSize(2);
 
-        // Проверяем что даты корректны (используя сравнение с допуском)
-        assertThat(result.get(0).created())
-                .isCloseTo(now.minusDays(1), within(1, ChronoUnit.MICROS));
-        assertThat(result.get(1).created())
-                .isCloseTo(now.minusDays(2), within(1, ChronoUnit.MICROS));
+        assertThat(result.get(0).created()).isEqualTo(now.minusDays(1));
+        assertThat(result.get(1).created()).isEqualTo(now.minusDays(2));
     }
 }
